--- a/index.html
+++ b/index.html
@@ -1,238 +1,168 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-<meta charset="UTF-8">
-<title>2015 Doblo 1.6 Multijet – 3D Driving Game</title>
-<style>
-body { margin:0; overflow:hidden; background:black; font-family:Arial; }
-#hud {
-    position:fixed;
-    top:10px; left:10px;
-    color:#0f0;
-    background:rgba(0,0,0,0.7);
-    padding:12px;
-    border-radius:10px;
-    z-index:10;
-    font-size:14px;
-}
-#hud span { color:white; }
-</style>
+    <meta charset="UTF-8">
+    <title>Pro 3D Drift - Jeep Renegade</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <style>
+        body { margin: 0; overflow: hidden; background: #050505; touch-action: none; font-family: sans-serif; }
+        #hud { position: fixed; top: 20px; left: 20px; color: #fff; z-index: 5; background: rgba(0,0,0,0.6); padding: 15px; border-radius: 10px; border-left: 5px solid #00ffcc; }
+        #controls { position: fixed; bottom: 30px; left: 0; right: 0; display: flex; justify-content: space-around; z-index: 5; pointer-events: none; }
+        .btn { width: 75px; height: 75px; border-radius: 50%; background: rgba(255,255,255,0.1); color: #fff; display: flex; align-items: center; justify-content: center; font-size: 25px; border: 2px solid #00ffcc; pointer-events: auto; user-select: none; }
+        .btn:active { background: #00ffcc; color: #000; }
+    </style>
 </head>
 <body>
 
 <div id="hud">
-🚐 <b>2015 DOBLO 1.6 MJET</b><br>
-Hız: <span id="speed">0</span> km/h<br>
-Vites: <span id="gear">N</span><br>
-W/S: Gaz/Fren<br>
-A/D: Direksiyon<br>
-Q/E: Vites ↓↑
+    VİTES: <span id="gear" style="color:#00ffcc; font-weight:bold;">D</span><br>
+    HIZ: <span id="speed" style="font-size:22px;">0</span> <small>km/h</small>
 </div>
 
-<script src="https://cdn.jsdelivr.net/npm/three@0.152.2/build/three.min.js"></script>
+<div id="controls">
+    <div class="btn" id="left">⬅</div>
+    <div class="btn" id="gas">⛽</div>
+    <div class="btn" id="brake">🛑</div>
+    <div class="btn" id="right">➡</div>
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/three@0.158/build/three.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/three@0.158/examples/js/loaders/OBJLoader.js"></script>
 
 <script>
-// =====================
-// SAHNE & RENDER
-// =====================
+// ===== SAHNE AYARLARI =====
 const scene = new THREE.Scene();
-scene.fog = new THREE.Fog(0x000000, 30, 200);
+scene.background = new THREE.Color(0x050510);
+scene.fog = new THREE.Fog(0x050510, 150, 1200);
 
-const camera = new THREE.PerspectiveCamera(75, innerWidth/innerHeight, 0.1, 1000);
-camera.position.set(0,5,-10);
-
-const renderer = new THREE.WebGLRenderer({antialias:true});
-renderer.setSize(innerWidth, innerHeight);
-renderer.setClearColor(0x101010);
+const camera = new THREE.PerspectiveCamera(60, window.innerWidth / window.innerHeight, 0.1, 3000);
+const renderer = new THREE.WebGLRenderer({ antialias: true });
+renderer.setSize(window.innerWidth, window.innerHeight);
+renderer.shadowMap.enabled = true;
 document.body.appendChild(renderer.domElement);
 
-// =====================
-// IŞIKLAR
-// =====================
+// ===== IŞIKLANDIRMA =====
 scene.add(new THREE.AmbientLight(0xffffff, 0.4));
 const sun = new THREE.DirectionalLight(0xffffff, 1);
-sun.position.set(5,15,5);
+sun.position.set(100, 200, 100);
+sun.castShadow = true;
 scene.add(sun);
 
-// =====================
-// YOL & ŞEHİR
-// =====================
-const road = new THREE.Mesh(
-    new THREE.PlaneGeometry(2000, 30),
-    new THREE.MeshStandardMaterial({color:0x333333})
-);
-road.rotation.x = -Math.PI/2;
-scene.add(road);
+// ===== GELİŞMİŞ ŞEHİR HARİTASI =====
+const roadGeo = new THREE.PlaneGeometry(3000, 3000);
+const roadMat = new THREE.MeshStandardMaterial({ color: 0x111111 });
+const ground = new THREE.Mesh(roadGeo, roadMat);
+ground.rotation.x = -Math.PI / 2;
+ground.receiveShadow = true;
+scene.add(ground);
+
+// Izgara ve Yol Çizgileri
+const grid = new THREE.GridHelper(3000, 100, 0x00ffcc, 0x222222);
+grid.position.y = 0.05;
+scene.add(grid);
 
 // Binalar
-for(let i=0;i<80;i++){
-    const b = new THREE.Mesh(
-        new THREE.BoxGeometry(5, Math.random()*20+5, 5),
-        new THREE.MeshStandardMaterial({color:0x444444})
-    );
-    b.position.set(
-        (Math.random()>0.5?1:-1)*(10+Math.random()*20),
-        b.geometry.parameters.height/2,
-        Math.random()*800-200
-    );
-    scene.add(b);
+const box = new THREE.BoxGeometry(1, 1, 1);
+for(let i=0; i<250; i++) {
+    const h = 20 + Math.random() * 70;
+    const w = 15 + Math.random() * 10;
+    const building = new THREE.Mesh(box, new THREE.MeshStandardMaterial({ color: 0x1a1a2e }));
+    building.scale.set(w, h, w);
+    building.position.set((Math.random()-0.5)*1800, h/2, (Math.random()-0.5)*1800);
+    if(Math.abs(building.position.x) < 25) building.position.x += 50;
+    building.castShadow = true;
+    scene.add(building);
 }
 
-// =====================
-// DOBLO MODEL
-// =====================
-const doblo = new THREE.Group();
+// ===== JEEP YÜKLEME (OBJ) =====
+const carGroup = new THREE.Group();
+scene.add(carGroup);
 
-// Gövde
-const body = new THREE.Mesh(
-    new THREE.BoxGeometry(2.6,1.4,4.5),
-    new THREE.MeshStandardMaterial({color:0xffffff})
-);
-body.position.y = 1.2;
-doblo.add(body);
-
-// Kabin
-const cabin = new THREE.Mesh(
-    new THREE.BoxGeometry(2.4,1.2,2.2),
-    new THREE.MeshStandardMaterial({color:0xf0f0f0})
-);
-cabin.position.set(0,2.2,-0.4);
-doblo.add(cabin);
-
-// Teker
-function wheel(x,z){
-    const w = new THREE.Mesh(
-        new THREE.CylinderGeometry(0.45,0.45,0.4,24),
-        new THREE.MeshStandardMaterial({color:0x111111})
-    );
-    w.rotation.z = Math.PI/2;
-    w.position.set(x,0.45,z);
-    doblo.add(w);
-}
-wheel(-1.3,1.7); wheel(1.3,1.7);
-wheel(-1.3,-1.7); wheel(1.3,-1.7);
-
-// Farlar
-const farL = new THREE.SpotLight(0xffffff,2,20,0.4);
-farL.position.set(-0.8,1.3,2.4);
-farL.target.position.z = 20;
-doblo.add(farL); doblo.add(farL.target);
-
-const farR = farL.clone();
-farR.position.x = 0.8;
-doblo.add(farR);
-
-// Stoplar
-const stopL = new THREE.PointLight(0xff0000,0,6);
-stopL.position.set(-0.8,1.2,-2.4);
-doblo.add(stopL);
-
-const stopR = stopL.clone();
-stopR.position.x = 0.8;
-doblo.add(stopR);
-
-scene.add(doblo);
-
-// =====================
-// TRAFİK ARAÇLARI
-// =====================
-const traffic = [];
-function spawnTraffic(){
-    const t = new THREE.Mesh(
-        new THREE.BoxGeometry(2,1.2,4),
-        new THREE.MeshStandardMaterial({color:0x0077ff})
-    );
-    t.position.set(Math.random()>0.5?4:-4,1, doblo.position.z+100);
-    scene.add(t);
-    traffic.push(t);
-}
-setInterval(spawnTraffic, 2000);
-
-// =====================
-// POLİS
-// =====================
-const police = new THREE.Mesh(
-    new THREE.BoxGeometry(2.2,1.2,4),
-    new THREE.MeshStandardMaterial({color:0x0000ff})
-);
-police.position.set(0,1,-30);
-scene.add(police);
-
-// =====================
-// FİZİK & KONTROLLER
-// =====================
-let speed = 0;
-let steering = 0;
-let gear = 0;
-const gears = [0, 0.6, 1, 1.4, 1.8, 2.2];
-
-const keys = {};
-onkeydown = e => keys[e.key.toLowerCase()] = true;
-onkeyup   = e => keys[e.key.toLowerCase()] = false;
-
-// =====================
-// OYUN DÖNGÜSÜ
-// =====================
-function animate(){
-    requestAnimationFrame(animate);
-
-    // Vites
-    if(keys["e"] && gear<5){ gear++; keys["e"]=false; }
-    if(keys["q"] && gear>0){ gear--; keys["q"]=false; }
-
-    // Gaz
-    if(keys["w"] && gear>0){
-        speed += 0.02 * gears[gear];
-        farL.intensity = farR.intensity = 2;
-    } else speed *= 0.98;
-
-    // Fren
-    if(keys["s"]){
-        speed *= 0.9;
-        stopL.intensity = stopR.intensity = 2;
-    } else stopL.intensity = stopR.intensity = 0;
-
-    // Direksiyon
-    if(keys["a"]) steering += 0.002;
-    if(keys["d"]) steering -= 0.002;
-    steering *= 0.9;
-
-    // Hareket
-    doblo.rotation.y += steering * speed;
-    doblo.position.x += Math.sin(doblo.rotation.y) * speed;
-    doblo.position.z += Math.cos(doblo.rotation.y) * speed;
-
-    // Kamera
-    camera.position.lerp(
-        new THREE.Vector3(
-            doblo.position.x,
-            doblo.position.y+4,
-            doblo.position.z-10
-        ), 0.1
-    );
-    camera.lookAt(doblo.position);
-
-    // Trafik hareket
-    traffic.forEach(t => {
-        t.position.z -= speed*0.8;
+const objLoader = new THREE.OBJLoader();
+// Yeni yüklediğin dosya adı
+objLoader.load('Jeep_Renegade_2016.obj', (object) => {
+    // OBJ modelleri genelde farklı ölçeklerde gelir, gerekirse 1,1,1 yapabilirsin
+    object.scale.set(3, 3, 3); 
+    
+    // Modelin merkezlenmesi ve yönü
+    object.rotation.y = Math.PI; 
+    
+    object.traverse(child => {
+        if(child.isMesh) {
+            child.castShadow = true;
+            child.receiveShadow = true;
+            // Model kaplamasız gelirse diye varsayılan bir renk
+            child.material = new THREE.MeshStandardMaterial({ color: 0x555555 });
+        }
     });
+    carGroup.add(object);
+    console.log("Jeep Başarıyla Yüklendi!");
+}, (xhr) => {
+    console.log((xhr.loaded / xhr.total * 100) + '% yüklendi');
+}, (err) => {
+    console.error("Yükleme hatası!", err);
+});
 
-    // Polis takip
-    police.position.z += (doblo.position.z - police.position.z) * 0.01;
+// ===== FİZİK MOTORU =====
+let speed = 0, gear = "D";
+const keys = { w:0, s:0, a:0, d:0 };
 
-    document.getElementById("speed").innerText = Math.abs(speed*60).toFixed(0);
-    document.getElementById("gear").innerText = gear===0?"N":gear;
+// Kontroller
+window.onkeydown = (e) => {
+    const k = e.key.toLowerCase();
+    if(k === 'w') keys.w = 1; if(k === 's') keys.s = 1;
+    if(k === 'a') keys.a = 1; if(k === 'd') keys.d = 1;
+    if(e.key === ' ') { gear = gear === "D" ? "R" : "D"; document.getElementById('gear').innerText = gear; }
+};
+window.onkeyup = (e) => {
+    const k = e.key.toLowerCase();
+    if(k === 'w') keys.w = 0; if(k === 's') keys.s = 0;
+    if(k === 'a') keys.a = 0; if(k === 'd') keys.d = 0;
+};
+
+// Mobil Buton Bağlantıları
+const setupBtn = (id, key) => {
+    const b = document.getElementById(id);
+    b.ontouchstart = (e) => { e.preventDefault(); keys[key] = 1; };
+    b.ontouchend = () => keys[key] = 0;
+};
+setupBtn('gas', 'w'); setupBtn('brake', 's'); setupBtn('left', 'a'); setupBtn('right', 'd');
+
+// ===== OYUN DÖNGÜSÜ =====
+function loop() {
+    requestAnimationFrame(loop);
+
+    // Hareket Mantığı
+    if(keys.w) speed += (gear === "D" ? 0.01 : -0.008);
+    if(keys.s) speed *= 0.9; // Fren
+    speed *= 0.97; // Sürtünme
+
+    const turn = 0.035 * (Math.abs(speed) > 0.02 ? 1 : 0);
+    if(keys.a) carGroup.rotation.y += turn * (speed >= 0 ? 1 : -1);
+    if(keys.d) carGroup.rotation.y -= turn * (speed >= 0 ? 1 : -1);
+
+    carGroup.position.x -= Math.sin(carGroup.rotation.y) * speed * 15;
+    carGroup.position.z -= Math.cos(carGroup.rotation.y) * speed * 15;
+
+    // Kamera Takibi
+    const camX = carGroup.position.x + Math.sin(carGroup.rotation.y) * 50;
+    const camZ = carGroup.position.z + Math.cos(carGroup.rotation.y) * 50;
+    camera.position.lerp(new THREE.Vector3(camX, 25, camZ), 0.1);
+    camera.lookAt(carGroup.position);
+
+    // HUD
+    document.getElementById('speed').innerText = Math.abs(speed * 150).toFixed(0);
 
     renderer.render(scene, camera);
 }
-animate();
 
-onresize = ()=>{
-    camera.aspect = innerWidth/innerHeight;
+window.onresize = () => {
+    camera.aspect = window.innerWidth / window.innerHeight;
     camera.updateProjectionMatrix();
-    renderer.setSize(innerWidth, innerHeight);
+    renderer.setSize(window.innerWidth, window.innerHeight);
 };
-</script>
 
+loop();
+</script>
 </body>
 </html>
